Use ppa for texlive 2016

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 before_install:
+- sudo add-apt-repository ppa:jonathonf/texlive-2016
 - sudo apt-get -qq -y update
 - sudo apt-get -qq -y install texlive texlive-latex-extra latexmk
 script:
