--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language:
   generic
 before_install:
-- sudo add-apt-repository ppa:jonathonf/texlive-2016
+- sudo add-apt-repository -y ppa:jonathonf/texlive-2016
 - sudo apt-get -qq -y update
 - sudo apt-get -qq -y install texlive texlive-latex-extra latexmk
 script:
