It's called texlive-xetex

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ addons:
     packages:
     - texlive
     - texlive-latex-extra
-    - texlive-xelatex
+    - texlive-xetex
     - latexmk
 script:
 - make
