Didn't work, retry with annotated tag

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,9 +16,8 @@ script:
 after_success:
 - git config --global user.email "builds@travis-ci.com"
 - git config --global user.name "Travis CI"
-- git tag -f draft HEAD
-- git push --delete origin draft
-- git push --tags https://${GITHUB_OAUTH_TOKEN}@github.com/vikraman/ci-release-pdf-test.git
+- git tag -f -a draft -m "Build ${TRAVIS_BUILD_NUMBER} for commit ${TRAVIS_COMMIT}"
+- git push -f --tags https://${GITHUB_OAUTH_TOKEN}@github.com/vikraman/ci-release-pdf-test.git
 deploy:
   provider: releases
   api_key: ${GITHUB_OAUTH_TOKEN}
