--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,7 @@ deploy:
   provider: releases
   api_key: ${GITHUB_OAUTH_TOKEN}
   file: main.pdf
+  overwrite: true
   skip_cleanup: true
   on:
     tags: true
