--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ addons:
     - latexmk
 script:
 - make
-after_success:
+before_deploy:
 - git config --global user.email "builds@travis-ci.com"
 - git config --global user.name "Travis CI"
 - git tag -f -a draft -m "Build ${TRAVIS_BUILD_NUMBER} for commit ${TRAVIS_COMMIT}"
